<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/backgroundStage" android:background="@drawable/stagefight">
    <TextView
            android:text="@string/playerHP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/playerHP"
            android:textColor="@color/white" android:background="#5980E384"
            android:shadowColor="#43D549" android:textSize="24sp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintVertical_bias="0.042"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/enemyHP"
            android:background="#9AE64767" android:textColor="#0C0C0C"
            android:textSize="20sp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.938"
            app:layout_constraintVertical_bias="0.054" android:text="@string/boss_HPDisp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/gameover_lose" android:id="@+id/bossWin"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" app:layout_constraintStart_toEndOf="@+id/heroWin"
            app:layout_constraintHorizontal_bias="0.995" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/retryButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.413" app:backgroundTint="#F61717"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.244"
            android:onClick="onRetryClick"/>
    <Button
            android:layout_width="165dp"
            android:layout_height="173dp" android:id="@+id/boss_click"
            android:background="@drawable/boss_idle"
            app:backgroundTint="#00FFFFFF" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.694"
            app:layout_constraintVertical_bias="0.873" android:textCursorDrawable="@drawable/boss_idle"
            app:backgroundTintMode="src_atop" android:onClick="onBossClick"/>
    <ImageView
            android:layout_width="122dp"
            android:layout_height="143dp" app:srcCompat="@drawable/hero_idle" android:id="@+id/heroBoi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/boss_click" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.585"
            app:layout_constraintVertical_bias="0.868"
            android:contentDescription="@string/heroTag"/>
    <TextView
            android:text="@string/TimerDisp"
            android:layout_width="150dp"
            android:layout_height="48dp" android:id="@+id/TimerDisplay"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.757"
            app:layout_constraintVertical_bias="0.413" android:textColor="@color/white" android:textSize="24sp"
            android:fontFamily="@font/keania_one" android:gravity="center"/>
    <TextView
            android:text="@string/livesDisp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintVertical_bias="0.054" android:textColor="@color/white" android:textSize="20sp"/>
    <TextView
            android:text="@string/livesDisp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/enemyHP" app:layout_constraintHorizontal_bias="0.987"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.054" android:textColor="@color/white" android:textSize="20sp"/>
    <ImageView
            android:layout_width="37dp"
            android:layout_height="61dp" app:srcCompat="@drawable/rorygremolino" android:id="@+id/rory"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.289"/>
    <ImageView
            android:layout_width="44dp"
            android:layout_height="53dp" app:srcCompat="@drawable/remy" android:id="@+id/remy"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintVertical_bias="0.377"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/gameover_win" android:id="@+id/heroWin"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.483"/>

</androidx.constraintlayout.widget.ConstraintLayout>