<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@drawable/dungeon"
                                                   android:id="@+id/backgroundMain"
                                                   android:contentDescription="@string/heroTag">

    <TextView
            android:text="@string/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/battleView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold|italic" android:textSize="40sp"
            app:layout_constraintVertical_bias="0.202"
            android:textColor="#FFFFFF" android:shadowColor="#F44336" android:fontFamily="@font/bungee_shade"
            app:layout_constraintHorizontal_bias="0.498"/>
    <Button
            android:text="@string/playButton"
            android:layout_width="160dp"
            android:layout_height="73dp" android:id="@+id/playButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.737"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/white" android:textSize="20sp"
            android:fontFamily="@font/bungee_shade" app:backgroundTint="#AEB50202" android:textStyle="bold"
            android:onClick="playButtonClick"/>
    <ImageView
            android:layout_width="240dp"
            android:layout_height="223dp" app:srcCompat="@drawable/rorygremolino" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.941" app:layout_constraintVertical_bias="0.742"/>
    <ImageView
            android:layout_width="232dp"
            android:layout_height="216dp" app:srcCompat="@drawable/remy" android:id="@+id/imageView4"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.191"
            app:layout_constraintVertical_bias="0.794"/>
</androidx.constraintlayout.widget.ConstraintLayout>